alignment and size fixes for header

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,4 +1,9 @@
 /** SEARCH FEATURE **/
+
+.usa-header {
+	height: 190px;
+}
+
 .search-feature {
 	margin: 30px auto 0px auto;
 	max-width: 1200px;
@@ -55,7 +60,7 @@ div.usa-navbar:after {
 }
 
 nav.usa-nav {
-	padding: 20px 0 10px 0;
+	padding: 35px 0 10px 0;
 	background: none;
 	float: right;
 ul {
@@ -111,15 +116,19 @@ a {
 div#logo.usa-logo {
 	float: left;
 	position: absolute;
-	top: -50px;
+	top: -70px;
 	z-index: 1;
-	padding: 30px;
-	height: 160px;
-	 max-width: 150px;
-	min-width: 150px;
+	padding: 25px;
+	height: 175px;
+	 max-width: 160px;
+	min-width: 160px;
 	background: #fff;
+	text-align: center;
+	border-radius: 2px;
+	-webkit-border-radius: 2px;
+	-moz-border-radius: 2px;
 	img {
-		max-width: 90px;
+		max-width: 110px;
 	}
 }
 
@@ -263,10 +272,10 @@ nav.usa-nav {
 }
 
 li.parent .sub-menu {
-    width: 200px;
+    width: 205px;
     padding: 0px;
     position: absolute;
-    top: 15px;
+    top: 20px;
     left: 0;
     z-index: -1;
     opacity: 0;
@@ -481,8 +490,9 @@ ul.usa-nav-primary li a {
   padding-top: 5px;
 /*  border-top: 1px solid #fff;*/
 /*  border-bottom: 1px solid #fff;*/
-  padding-bottom: 5px;
+  padding-bottom: 10px;
   box-sizing: border-box;
+  color: $mid-gray;
   &:hover {
 /*  	border-bottom: 1px solid #BBBBBB;*/
 /*  	border-top: 1px solid #BBBBBB;*/
@@ -580,19 +590,21 @@ img.desk {
 	font-style: italic;
 	border: none;
 	background: #F0F0F0;
-	width: 88%;
+	width: 86%;
+	height: 35px;
 	padding-left: 20px;
 	border-radius: 25px 0 0 25px;
 }
 
 #searchgovform.usa-search button#searchgovbutton {
 	background: #D0D0D0;
-	width: 12%;
+	width: 14%;
+	height: 35px;
 	float: left;
 	border-radius: 0 25px 25px 0;
 	svg {
 		color: #fff;
-		margin: 0 0 0 5px;
+		margin: 0;
 		width: 20px;
 		height: 20px;
 	}
@@ -609,6 +621,10 @@ img.desk {
 }
 }
 
+.usa-header .usa-search {
+	max-width: 300px !important;
+}
+
 .search-wrapper {
 	float: right;
 	max-width: 400px;
@@ -616,6 +632,7 @@ img.desk {
 	display: flex;
 	.bell {
 		position: relative;
+		cursor: pointer;
 	}
 	#alert-logic {
 		display: none;
@@ -666,6 +683,108 @@ img.desk {
 	border-radius: 20px;
 	text-align: center;
 	border: 2px solid #fff;
+	&:hover {
+		text-decoration: none;
+	}
 }
+}
+
+@media all and (min-width: 951px) {
+  .usa-header-basic .usa-navbar {
+    // this affects the size of the logo and also the mobile menu nav
+/*    width: 30%;*/
+  }
+}
+
+//@media all and (max-width: 951px) {
+//  #logo img {
+//    // keep header img from overflowing menu bar
+//    max-height: 3.7rem;
+//  }
+//}
+
+.usa-nav-primary a:hover {
+  color: $button-color;
+}
+
+.usa-nav-link:hover span {
+  border-bottom-color: $button-color;
+}
+
+.fixed {
+	width: 100%;
+	background: $dark-blue;
+	position: absolute;
+	top: 0;
+}
+
+#navigation ul.usa-nav-primary li.parent {
+	padding-left: 1.8rem;
+	padding-right: 1.5rem;
+	padding-top: 5px;
+	padding-bottom: 10px;
+	color: #757575;
+/*	border-top: 1px solid #fff;*/
+	&:hover {
+/*		border-top: 1px solid #bbb;*/
+color: $light-blue;
+	}
+}
+
+.usa-nav ul li.parent {
+	border: none;
+	color: #212121;
+//	display: block;
+	font-family: proxima-nova, sans-serif;
+	line-height: 1.3;
+  padding: 1.4rem 1.5rem 1rem 1.8rem;
+	text-decoration: none;
+	font-weight: 700;
+	font-style: normal;
+	cursor: pointer;
+	width: auto;
+	color: #5b616b;
+	letter-spacing: .05em;
+	font-size: 14px;
+	  &:active {
+	    color: $link-active-color;
+		box-shadow: none;
+		-webkit-box-shadow: none;
+	  }
+	  &:focus:active {
+	  	color: $link-active-color;
+	  	box-shadow: none;
+	  	-webkit-box-shadow: none;
+	  }
+	  &:focus {
+/*	  	box-shadow: none;*/
+/*	  	outline: 1px solid $light-blue;*/
+	  }
+	  a {
+	  	&:active {
+	  		    color: $link-active-color;
+/*	  			box-shadow: none;*/
+	  			-webkit-box-shadow: none;
+	  		  }
+	  		  &:focus:active {
+	  		  	color: $link-active-color;
+/*	  		  	box-shadow: none;*/
+/*	  		  	-webkit-box-shadow: none;*/
+	  		  }
+	  		  &:focus {
+/*	  		  	box-shadow: none;*/
+/*	  		  	outline: 1px solid $light-blue;*/
+	  		  }
+	  }
+}
+
+@media (min-width: 951px) and (max-width: 1200px) {
+.usa-nav ul li.parent {
+	font-size: 1.3rem;
+	}
+}
+
+.usa-nav ul li.parent:hover {
+	color: $light-blue; 
 }
 
