--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,6 +16,7 @@ $dark-blue: #112e51;
 $light-blue: #205493;
 $teal: #59B2D9;
 $fr-red: #E41C3f;
+$fr-dark-red: #A00A0F;
 $dark-gray: #4c4c4e;
 $mid-gray: #757575;
 $light-gray: #D0D0D0;
